Bug Fixes to Z-Index and other changes

--- a/static/editor/css/editor.css
+++ b/static/editor/css/editor.css
@@ -2,6 +2,14 @@
 	display: none;
 }
 
+#navbar-container {
+	z-index: 5000;
+}
+
+#sidebar {
+	z-index: 5000;
+}
+
 .main-content {
 	position: relative;
 	top: 50px;
